Search API 1.x, dev (xx/xx/xxxx):
---------------------------------
- #1471310 by drunken monkey: Fixed handling of unset fields when indexing.
- #1594762 by drunken monkey, alanom, esclapes: Fixed detection of deleted items
  in the Hierarchy data alteration.
- #1702604 by JvE, slucero: Added option for maximum date facet depth.

Search API 1.4 (01/09/2013):
----------------------------
- #1827272 by drunken monkey: Fixed regression introduced by #1777710.
- #1807622 by drunken monkey: Fixed definition of the default node index.
- #1818948 by das-peter: Fixed endless loop in
  search_api_index_specific_items_delayed().
- #1406808 by Haza, drunken monkey: Added support for date popup in exposed
  filters.
- #1823916 by aschiwi: Fixed batch_sise typos.

Search API 1.3 (10/10/2012):
----------------------------
- Patch by mr.baileys: Fixed "enable" function doesn't use security tokens.
- #1318904 by becw, das-peter, orakili, drunken monkey: Added improved handling
  for NULL values in Views.
- #1306008 by Damien Tournoud, drunken monkey: Fixed handling of negative
  facets.
- #1182912 by drunken monkey, sepgil: Added Rules action for indexing entities.
- #1507882 by jsacksick: Added "Exclude unpublished nodes" data alteration.
- #1225620 by drunken monkey: Added Batch API integration for the "Index now"
  functionality.
- #1777710 by dasjo: Remove dependency on $_GET['q'] for determining base paths.
- #1715238 by jsacksick: Fixed fulltext argument handler field list is broken.
- #1414138 by drunken monkey: Fixed internal static index property cache.
- #1253320 by drunken monkey, fago: Fixed improper error handling.

Search API 1.2 (07/07/2012):
----------------------------
- #1368548 by das-peter: Do not index views results by entity id.
- #1422750 by drunken monkey, sepgil: Fixed illegal modification of entity
  objects.
- #1363114 by nbucknor: Fixed inclusion of upper bound in range facets.
- #1580780 by drunken monkey: Fixed default regexps of the Tokenizer.